--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
   uses: appleboy/ssh-action@v1
   with:
     host: ${{ secrets.HOST }}
-    username: ${{ secrets.USERNAME }}
+    username: ${{ vars.USERNAME }}
     key: ${{ secrets.SSH_KEY }}
     port: 22
     script: whoami
