--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Execute remote SSH commands using password
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ ORA1_SERV}}
+          host: ${{ vars.ORA1_SERV}}
           username: ubuntu
           key: ${{ secrets.SSH_KEY }}
           # port: ${{ secrets.PORT }}
