--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name:  checkout
+        uses: actions/checkout@v4
+      - run: |
+           date > generated.txt
+
       - name: Execute remote SSH commands using password
         uses: appleboy/ssh-action@v1
         with:
